# gool

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: configuration.md  index.md  modules.md
src/gool/: log_clustering.py  logs_miner.py
tests/: test_foo.py  test_gool.py  test_logs_miner.py
tests/data/: drain3.ini  drain3_compare_baseline.ini
tests/data/results/: 6times_Zookeeper_2k_raw_output.txt  Apache_2K_baseline_compare.txt  Apache_2K_baseline_compare_common.txt  Apache_2k_raw_output.txt  Apache_2k_time_filter.txt  Zookeeper_2k_depth10.txt  Zookeeper_2k_lex_order.txt  Zookeeper_2k_sim_thres_5.txt  Zookeeper_2k_size_order.txt  Zookeeper_2k_warn.txt
