[project]
name = "gool"
dynamic = ["version"]
description = "cli logs clustering"
authors = [{ name = "Olivier GODARD" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = ["rich ~= 14.0",
  "drain3~=0.9",
  "tyro~=1.0.13",
]

[project.scripts]
gool = "gool.log_clustering:main_cli"

[project.urls]
Homepage = "https://github.com/leCapi/gool"
Repository = "https://github.com/leCapi/gool"
Documentation = "https://github.com/leCapi/gool"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-html>=4.2.0",
    "pre-commit>=4.5.0",
    "tox-uv>=1.29.0",
    "deptry>=0.24.0",
    "mypy>=1.19.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
    "mkdocs<2.0.0",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0.0",
    "hatch-vcs"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/gool/_version.py"

[tool.hatch.version.raw-options]
fallback_version = "0.0.0"
git_describe_command = ['git', 'describe', '--dirty', '--tags', '--long', '--first-parent', '--match', '*[0-9]*']
version_scheme="only-version"
#version_scheme="no-guess-dev"
normalize = false

[tool.hatch.build.targets.wheel]
packages = ["src/gool"]

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--html=build/pytest/report.html --self-contained-html --cov-report=html:build/pytest/coverage --cov-fail-under=80 --cov-report=xml:build/coverage.xml"

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # blanket-type-ignore
    "PGH003"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.tox]
env_list = ["py310", "py311", "py312", "py313"]

[tool.tox.env_run_base]
pass_env = ["PYTHON_VERSION"]
allowlist_externals = ["uv"]
commands = [
  ["uv", "sync", "--active", "--python", "{envpython}"],
  ["uv", "run", "--active", "python", "-m", "pytest", "--doctest-modules", "tests", "--cov", "--cov-config=pyproject.toml", "--cov-report=xml:build/{envname}/coverage.xml"],
  ["uv", "run", "--active", "mypy"]
]
